// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peers Component should render Peers with Error when peers state is error 1`] = `
<p
  className="label label--small"
>
  Error
</p>
`;

exports[`Peers Component should render Peers with loading... when peers state is empty 1`] = `
<p
  className="label label--small"
>
  Loading...
</p>
`;

exports[`Peers Component should render Peers with peers state data correctly 1`] = `
<span
  className="label label--small"
>
  peers1, peers2, peers3, peers4
</span>
`;
